--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,6 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "core": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
