--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
         "type": "cppdbg",
         "request": "launch",
          //可执行文件位置
-        "program": "${workspaceFolder}/test",
-        "args": ["sofa.stl"],
+        "program": "${workspaceFolder}/main",
+        "args": ["./model/sofa.stl"],
         //是否进入后暂停
         "stopAtEntry": false,
         //工作目录
